--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -2,34 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mapping_GeoJSON_Data</title>
-
-        <!-- Leaflet CSS-->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-        crossorigin=""/> 
-        <!-- add the airport data-->
-        <script scr="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-
-        <!-- Our CSS -->
-        <link rel="stylesheet" type="text/css" href="static/css/style.css">
-
+    <!-- Leaflet CSS-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+crossorigin=""/>  
+    <!-- d3 JavaScript-->
+    <script scr="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+    <!-- Our CSS -->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
     <!-- The div that holds our map -->
     <div id="mapid"></div> 
-   
     <!-- Leaflet JavaScript -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- Get the data-->
-    <script type="text/javascript" src="static/js/cities.js"></script>
+    <!-- <script type="text/javascript" src="static/majorAirpors.json"></script> -->
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>   
 </body>
