--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -10,7 +10,7 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
 crossorigin=""/>  
     <!-- d3 JavaScript-->
-    <script scr="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
@@ -24,7 +24,7 @@ crossorigin=""/>
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- Get the data-->
-    <!-- <script type="text/javascript" src="static/majorAirpors.json"></script> -->
+    <!-- <script type="text/javascript" src="static/majorAirports.json"></script> -->
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>   
 </body>
