--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -26,6 +26,6 @@ crossorigin=""/>
     <!-- Get the data-->
     <!-- <script type="text/javascript" src="static/majorAirports.json"></script> -->
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/logic.js"></script>   
+    <script type="text/javascript" src="static/js/logicStep1.js"></script>   
 </body>
 </html>
